# luggage_bot

./: .gitignore  README.MD
src/luggage_description/: CMakeLists.txt  package.xml
src/luggage_description/config/: mapper_params_online_async.yaml  nav2_params.yaml
src/luggage_description/fimware/: ROSArduinoBridge.ino  commands.h  motor_driver.h  motor_driver.ino  sensors.h  servos.h  servos.ino
src/luggage_description/firmware/: PicoRosBridge.ino  ROSArduinoBridge.ino  commands.h  diff_controller.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino  sensors.h
src/luggage_description/firmware/ROSArduinoBridge/: ROSArduinoBridge.ino  diff_controller.h  encoder_driver.ino
src/luggage_description/launch/: mapping.launch.py  navigation.launch.py  teleop_hardware.launch.py  teleop_rviz.launch.py
src/luggage_description/meshes/: base_link.stl  display_link_1.stl  front_left_castor_wheel_1.stl  front_right_castor_wheel_1.stl  left_wheel_1.stl  lidar_1.stl  rear_left_castor_wheel_1.stl  rear_right_castor_wheel_1.stl  right_wheel_1.stl
src/luggage_description/rviz/: rviz.rviz
src/luggage_description/scripts/: fake_odom.py  nano_bridge.py  pico_bridge.py  scan_filter.py
src/luggage_description/urdf/: luggage.xacro  materials.xacro
src/luggage_gui/: package-lock.json  package.json  package.xml  setup.cfg  setup.py
src/luggage_gui/frontend/: App.js  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
src/luggage_gui/launch/: humynex_os.launch.py
src/luggage_gui/luggage_gui/: __init__.py  pose_tracker.py  system_manager.py  wifi_manager.py
src/luggage_gui/test/: test_copyright.py  (+2 more)
(+9 files in other folders)
